EZ-2421: Website font and truncation fixed

--- a/App/PluginWeb/EzBob.Web/Content/css/Underwriter.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/Underwriter.css
@@ -2005,3 +2005,7 @@ td a.edit-loan {
 	font-weight: bold;
 	background-color: #e5e5e5;
 }
+
+.customer-website-font {
+    font-family: 'Open Sans';
+}
